services section tablet screen fixes

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9943,6 +9943,7 @@ html {
 @media (min-width: 768px) {
   .services-block {
     text-align: center;
+    margin: 0 2rem;
   }
 }
 @media (min-width: 1440px) {
@@ -9963,8 +9964,8 @@ html {
 }
 @media (min-width: 768px) {
   .services-block__heading {
-    text-align: center;
-    margin-left: auto;
+    text-align: left;
+    margin-left: 0;
     margin-right: auto;
   }
 }
@@ -9999,7 +10000,6 @@ html {
     display: grid;
     grid-auto-flow: row;
     grid-template-columns: repeat(auto-fill, 30%);
-    justify-content: center;
   }
 }
 @media (min-width: 1440px) {
@@ -10011,7 +10011,7 @@ html {
 }
 .services-block__item {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 48px;
   color: #000000;
 }
@@ -10029,6 +10029,11 @@ html {
 @media (min-width: 1440px) {
   .services-block__list {
     width: 40%;
+  }
+}
+@media (min-width: 768px) {
+  .services-block__list {
+    text-align: left;
   }
 }
 .services-block__list .button.button--secondary {
